# security-analysis-tool

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  PROJECT_STRUCTURE_IMPROVEMENTS.md  README.md  VERSIONING.md  index.html  install.sh  lunr-index-1748978106649.json  lunr-index-1748978543161.json  lunr-index-1748982022618.json  lunr-index-1748982067724.json  lunr-index-1748982246629.json  lunr-index-1748982340018.json  lunr-index-1748982899009.json  lunr-index-1749147118617.json  lunr-index-1750277137689.json  lunr-index-1754948453962.json  lunr-index-1758228104735.json  lunr-index-1760995997936.json  lunr-index-1763073202492.json  lunr-index-1771368581114.json  lunr-index-1771369552905.json  lunr-index-1771369943735.json  lunr-index-1771370035050.json  lunr-index-1773437472588.json  main.py  pyproject.toml  requirements.txt  search-doc-1748978543161.json  search-doc-1748982022618.json  search-doc-1748982067724.json  search-doc-1748982246629.json  search-doc-1748982340018.json  search-doc-1748982899009.json  (+14 more)
.github/: pull_request_template.md
configs/: manual_sat_check.yaml  readme  sat_dagf_mapping.csv  sat_dasf_mapping.csv  security_best_practices.csv  security_best_practices_old.csv  security_best_practices_pre_GOV45_backup.csv  self_assessment_checks.yaml  setupsecrets.sh  trufflehog_detectors.yaml
dabs/: main.py  requirements.txt  setup.sh
dashboards/: SAT - Security Analysis Tool (Lakeview).lvdash.json  SAT_Dashboard.json  SAT_Dashboard_definition.json  dashboard-317f4809-8d9d-4956-a79a-6eee51412217.json  readme  (+1 more)
(+602 files in other folders)
